[gd_scene load_steps=5 format=3 uid="uid://blphuq6acnyg"]

[ext_resource type="Texture2D" uid="uid://nth0njjmtwmp" path="res://graphics/magicBall.png" id="1_h1ysy"]
[ext_resource type="Script" path="res://scenes/lantern/lantern.gd" id="1_oxho2"]
[ext_resource type="Texture2D" uid="uid://c603vl0sbxibr" path="res://graphics/circle.png" id="2_tnoli"]

[sub_resource type="CircleShape2D" id="CircleShape2D_08rxc"]
radius = 196.255

[node name="lantern" type="Node2D" groups=["lantern"]]
script = ExtResource("1_oxho2")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.05, 0.05)
texture = ExtResource("1_h1ysy")

[node name="PointLight2D" type="PointLight2D" parent="."]
scale = Vector2(0.75, 0.75)
energy = 1.61
texture = ExtResource("2_tnoli")

[node name="PlayerDetect" type="Area2D" parent="."]
collision_mask = 2

[node name="PlayerDetectColider" type="CollisionShape2D" parent="PlayerDetect"]
shape = SubResource("CircleShape2D_08rxc")

[node name="TimerOn" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TimerOff" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="PlayerDetect" to="." method="_on_player_detect_body_entered"]
[connection signal="body_exited" from="PlayerDetect" to="." method="_on_player_detect_body_exited"]
[connection signal="timeout" from="TimerOn" to="." method="_on_timer_on_timeout"]
[connection signal="timeout" from="TimerOff" to="." method="_on_timer_off_timeout"]
